tests/ui/type/type-check/issue-40294.stderr
error[E0283]: type annotations needed: cannot satisfy `&'a T: Foo`
  --> $DIR/issue-40294.rs:6:19
   |
LL |     where &'a T : Foo,
   |                   ^^^
   |
note: multiple `impl`s or `where` clauses satisfying `&'a T: Foo` found
  --> $DIR/issue-40294.rs:6:19
   |
LL |     where &'a T : Foo,
   |                   ^^^
LL |           &'b T : Foo
   |                   ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0283`.
